--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -7,21 +7,19 @@
     "production": "tidory production",
     "store": "tidory store",
     "deploy": "tidory deploy",
-    "lint": "eslint --ext .js --ignore-path .gitignore . && pug-lint ."
+    "lint": "eslint && pug-lint ."
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "eslint": "^8.22.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-webpack-plugin": "^3.2.0",
-    "pug-lint": "^2.6.0"
+    "@eslint/js": "^9.15.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.15.0",
+    "eslint-webpack-plugin": "^4.2.0",
+    "globals": "^15.12.0",
+    "pug-lint": "^2.7.0"
   },
   "dependencies": {
-    "alpinejs": "^3.11.1",
-    "tailwindcss": "3.2.4",
-    "tidory": "8.4.2"
+    "alpinejs": "^3.14.5",
+    "tailwindcss": "3.2.7",
+    "tidory": "8.4.3"
   }
 }
