--- a/packages/tidory-webpack-plugin/package.json
+++ b/packages/tidory-webpack-plugin/package.json
@@ -1,29 +1,27 @@
 {
   "name": "tidory-webpack-plugin",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Webpack plugin for Tidory Framework",
   "main": "index.js",
   "files": [
     "lib"
   ],
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint"
   },
   "devDependencies": {
-    "eslint": "^8.22.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-webpack-plugin": "^3.2.0"
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0"
   },
   "dependencies": {
-    "@babel/core": "^7.20.5",
-    "cheerio": "^1.0.0-rc.12",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "cheerio": "^1.0.0",
     "cssesc": "^3.0.0",
-    "html-minifier-terser": "^5.1.1",
-    "html-webpack-plugin": "^5.5.0",
-    "js-beautify": "^1.14.7",
-    "tistory-skin": "^2.1.2"
+    "html-minifier-terser": "^7.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "js-beautify": "^1.15.1",
+    "tistory-skin": "^2.1.3"
   }
 }
