--- a/packages/tidory/package.json
+++ b/packages/tidory/package.json
@@ -3,62 +3,14 @@
   "description": "It's awesome framework for Tistory Skin",
   "license": "MIT",
   "engines": {
-    "node": ">=12"
+    "node": ">=20"
   },
-  "version": "8.4.2",
+  "version": "8.4.3",
   "bin": {
     "tidory": "./bin/tidory"
   },
   "scripts": {
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-react": "^7.13.13",
-    "@vue/compiler-sfc": "^3.0.11",
-    "astroturf": "^1.0.1",
-    "babel-loader": "^8.2.2",
-    "cheerio": "^1.0.0-rc.12",
-    "clean-webpack-plugin": "^4.0.0",
-    "commander": "^7.2.0",
-    "copy-webpack-plugin": "^9.0.0",
-    "css-loader": "^5.2.5",
-    "dotenv": "^10.0.0",
-    "dotenv-webpack": "^7.0.2",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss": "^8.4.20",
-    "postcss-loader": "^5.3.0",
-    "pug": "^3.0.2",
-    "pug-load": "^3.0.0",
-    "pug-plain-loader": "^1.1.0",
-    "randomstring": "^1.2.1",
-    "raw-loader": "^4.0.2",
-    "shelljs": "^0.8.4",
-    "style-loader": "^2.0.0",
-    "svelte": "^3.38.2",
-    "svelte-loader": "^3.1.1",
-    "terser-webpack-plugin": "^5.2.4",
-    "tidory-webpack-plugin": "^1.3.2",
-    "tistory-skin": "^2.1.2",
-    "vue-loader": "^16.2.0",
-    "vue-style-loader": "^4.1.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.0",
-    "webpack-merge": "^5.8.0",
-    "webpackbar": "^5.0.2"
-  },
-  "devDependencies": {
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "eslint": "^8.22.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-webpack-plugin": "^3.2.0"
+    "lint": "eslint"
   },
   "files": [
     "bin",
@@ -66,10 +18,47 @@
     "lib",
     "tidory.config.js"
   ],
-  "homepage": "https://tidory.com",
-  "keywords": [
-    "tistory",
-    "tistory skin",
-    "tidory"
-  ]
+  "dependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@vue/compiler-sfc": "^3.5.13",
+    "astroturf": "^1.2.0",
+    "babel-loader": "^9.2.1",
+    "cheerio": "^1.0.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "commander": "^12.1.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
+    "pug": "^3.0.3",
+    "pug-load": "^3.0.0",
+    "pug-plain-loader": "^1.1.0",
+    "randomstring": "^1.3.0",
+    "raw-loader": "^4.0.2",
+    "shelljs": "^0.8.5",
+    "style-loader": "^4.0.0",
+    "svelte": "^5.2.10",
+    "svelte-loader": "^3.2.4",
+    "terser-webpack-plugin": "^5.3.10",
+    "tidory-webpack-plugin": "^1.3.3",
+    "tistory-skin": "^2.1.3",
+    "vue-loader": "^17.4.2",
+    "vue-style-loader": "^4.1.3",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
+    "webpack-merge": "^6.0.1",
+    "webpackbar": "^7.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0"
+  }
 }
