--- a/packages/tistory-skin/package.json
+++ b/packages/tistory-skin/package.json
@@ -1,25 +1,22 @@
 {
   "name": "tistory-skin",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "Unofficial Tistory Skin API",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --ext .js index.js lib"
+    "lint": "eslint"
   },
   "files": [
     "lib"
   ],
   "devDependencies": {
-    "eslint": "^8.22.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-webpack-plugin": "^3.2.0"
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "form-data": "^2.3.3",
-    "walk": "^2.3.14"
+    "axios": "^1.7.8",
+    "form-data": "^4.0.1",
+    "walk": "^2.3.15"
   }
 }
